Closed Bug 1090866 Opened 11 years ago Closed 11 years ago

SPDY SSL websockets unable to connect

Categories

(Core :: Networking: WebSockets, defect)

33 Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: marc, Assigned: mcmanus)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/38.0.2125.111 Safari/537.36 Steps to reproduce: Set Auto Proxy config with a SPDY proxy, e.g. function FindProxyForURL(url, host) {return "HTTPS spdy.example.com:443"; } Visit http://websocketstest.com/ Let me know if you need a spdy server to test with. Actual results: WebSockets (Port 443, SSL) fails to connect Expected results: WebSockets (Port 443, SSL) should connect
Component: Untriaged → Networking: WebSockets
Product: Firefox → Core
does the proxy allow connect tunnels? It will need to for websockets
It should but I did not configure the proxy myself, so I cannot personally confirm. However I have tested it against two spdy server implementations; https://github.com/tatsuhiro-t/spdylay and https://github.com/igrigorik/node-spdyproxy and I get the same result for both.
hmmm.. I can confirm. but if I change the pac to only use the proxy for the failing case (i.e. only for wss://), then it passes. I'll look into it.
fyi, we don't actually do spdy/h2 proxying of websockets. The reasons are internal esoteric ones having to do with how websockets takes direct control of the socket layer, but that's a case where we only proxy over h1. (its actually the only case I believe). however we do proxy over https with h1 - so your config should work as long as your server does https with h1 and is setup to allow connect tunnels.. and node-spdyproxy does indeed do that despite its name.
Attachment #8515245 - Flags: review?(hurley)
Assignee: nobody → mcmanus
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #8515245 - Flags: review?(hurley) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: