Bug 1090866 - wss over https proxy problem. r=hurley